# WatchDogs-Security-City

./: .dockerignore  .env.example  .gitignore  CHANGELOG_FIXES.md  DOCKER.md  Dockerfile  FRONTEND_REFACTORING_PLAN.md  MULTI_FRAME_CHAT_FIX.md  MULTI_FRAME_FEATURE.md  PROFESSIONAL_FEATURES.md  README.md  RESUMEN_FINAL.md  USER_GUIDE_PROFESSIONAL_FEATURES.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
data/maps/: README.md
diagrams/: README.md
diagrams/architecture/: 01_system_overview.drawio  02_ml_pipeline.drawio  03_deployment.drawio
docs/: IMPROVEMENTS_PROPOSAL.md  PROJECT_REVIEW.md  REFACTORING_COORDINATOR.md  requirements.md
history/: AUDIT_REPORT.md  GEOLOCATION_AGENT_README.md  SECURITY_FIXES.md  VERIFICATION_REPORT.md
src/backend/: app.py  config.py  exceptions.py
src/backend/agents/: __init__.py  coordinator.py  detection_agent.py  geolocation_agent.py  geolocation_agent_OLD_MONOLITHIC.py.backup  ocr_agent.py  vision_agent.py
src/backend/agents/context_intel/: __init__.py  context_intel_agent.py  prompts.py  response_parser.py
src/backend/agents/coordinator/: __init__.py  agent_runners.py  chat_graph.py  coordinator.py  geolocation_combiner.py  graph_builder.py  multi_frame_handler.py  multi_frame_reporter.py  report_generator.py  result_combiner.py  state.py
src/backend/agents/crowd_analysis/: __init__.py  crowd_analysis_agent.py  prompts.py  response_parser.py
src/backend/agents/face_analysis/: __init__.py  face_agent.py  prompts.py  response_parser.py
src/backend/agents/forensic_analysis/: __init__.py  forensic_agent.py  prompts.py  response_parser.py
src/backend/agents/geolocation/: __init__.py  prompts.py  response_parser.py
src/backend/agents/infrastructure_analysis/: __init__.py  infrastructure_analysis_agent.py  prompts.py  response_parser.py
src/backend/agents/multi_monitor/: __init__.py  multi_monitor_agent.py  prompts.py  response_parser.py
src/backend/agents/nato_symbology/: __init__.py  nato_symbology_agent.py  prompts.py  response_parser.py
src/backend/agents/night_vision/: __init__.py  night_vision_agent.py  prompts.py  response_parser.py
src/backend/agents/shadow_analysis/: __init__.py  prompts.py  response_parser.py  shadow_analysis_agent.py
src/backend/agents/temporal_comparison/: __init__.py  prompts.py  response_parser.py  temporal_comparison_agent.py
src/backend/agents/vehicle_detection/: __init__.py  prompts.py  response_parser.py  vehicle_detection_agent.py
src/backend/agents/weapon_detection/: __init__.py  prompts.py  response_parser.py  weapon_detection_agent.py
src/backend/api/: __init__.py  analysis_routes.py  auth_routes.py  map_routes.py  middleware.py  professional_routes.py  system_routes.py
src/backend/models/: __init__.py  agent_results.py
src/backend/services/: __init__.py  auth_service.py  geolocation_service.py  image_service.py  metadata_service.py  report_service.py  session_store.py  video_service.py
src/backend/services/auth/: __init__.py  auth_service.py  lockout_manager.py  password_handler.py  session_manager.py
src/backend/services/metadata/: __init__.py  exif_parser.py  metadata_service.py  video_extractor.py
src/backend/services/report/: __init__.py  generator.py  sections.py  styles.py
src/backend/utils/: __init__.py  cache_utils.py  circuit_breaker.py  image_utils.py  location_extractor.py  metrics_utils.py  retry_utils.py  timeout_utils.py
src/frontend/: dashboard.html  index.html
src/frontend/static/css/: style.css  style_OLD_MONOLITHIC.css.backup
src/frontend/static/css/modules/: base.css  components.css  layout.css  map.css  multiframe.css  professional.css  responsive.css  results.css  variables.css  video.css
src/frontend/static/js/: api-client.js  multi-frame.js  professional-features.js  roi-selector.js  video-player.js
src/frontend/static/js/modules/: chat-handler.js  image-utils.js  logger.js  map-handler.js  ui-manager.js
src/frontend/static/js/modules/professional/: evidence-handler.js  metadata-handler.js  pdf-generator.js
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_multi_frame_handler.py  test_services.py
